# application/health/views.py
@@ -1,0 +1,9 @@
+from flask import jsonify
+from flask.views import MethodView
+
+
+class HealthCheckView(MethodView):
+    """Service health check"""
+
+    def get(self):
+        return jsonify({"PING": "PONG"})
